# key-proxy

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/: Package.swift
app/Resources/: Info.plist
app/Sources/KeyProxy/: KeyProxyApp.swift
app/Sources/KeyProxy/Models/: Rule.swift
app/Sources/KeyProxy/Services/: ConfigStore.swift  DaemonClient.swift  KeychainStore.swift  NetworkProxy.swift  ProxyController.swift
app/Sources/KeyProxy/Views/: AddRuleSheet.swift  GeneralTab.swift  MenuBarView.swift  RulesTab.swift  SettingsView.swift  StatsTab.swift
app/scripts/: build-app.sh
daemon/: Cargo.toml
daemon/src/: ipc.rs  main.rs  network.rs  state.rs  stats.rs
daemon/src/proxy/: cert.rs  connect.rs  intercept.rs  mod.rs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  keychain.rs  lib.rs  main.rs  network.rs  stats.rs
src-tauri/src/proxy/: cert.rs  connect.rs  intercept.rs  mod.rs  tunnel.rs
src/components/: AddRuleModal.tsx  RuleList.tsx  Settings.tsx  Stats.tsx
src/lib/: tauri.ts
