[package]
name = "keyproxyd"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "keyproxyd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
webpki-roots = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
