[package]
name = "keyproxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "keyproxy_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
rcgen = { version = "0.13", features = ["pem"] }
security-framework = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
once_cell = "1"
httparse = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
